<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CategoryDetailActivity"
    tools:ignore="MissingDefaultResource">
    <View
        android:id="@+id/view_header"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:background="@color/dark_blue_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_arrow_back"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/view_header"
        app:layout_constraintStart_toStartOf="@+id/view_header"
        app:layout_constraintTop_toTopOf="@+id/view_header"
        android:contentDescription="@string/back_button" />

    <TextView
        android:id="@+id/text_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_title"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_arrow_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_arrow_back" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/activity_description"
        android:padding="16dp"
        android:textSize="24sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_header" />

    <ImageView
        android:id="@+id/image_participants"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_person"
        app:layout_constraintEnd_toStartOf="@+id/text_participants"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_description" />

    <TextView
        android:id="@+id/text_number_participants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_partcipants"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_participants"
        app:layout_constraintTop_toTopOf="@id/text_participants" />


    <TextView
        android:id="@+id/text_participants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participants_holder"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_participants"
        app:layout_constraintEnd_toStartOf="@id/text_number_participants"
        app:layout_constraintStart_toEndOf="@id/text_participants"
        app:layout_constraintTop_toBottomOf="@id/text_description"
        app:layout_constraintTop_toTopOf="@id/image_participants" />


    <ImageView
        android:id="@+id/image_price"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_price"
        app:layout_constraintEnd_toStartOf="@+id/text_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_participants" />

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/price"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_price"
        app:layout_constraintEnd_toStartOf="@id/text_level_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_participants"
        app:layout_constraintTop_toTopOf="@id/image_price" />

    <TextView
        android:id="@+id/text_level_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_level"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@id/text_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_price"
        app:layout_constraintTop_toTopOf="@id/text_price" />

    <Button
        android:id="@+id/button_try_another"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/dark_blue_background"
        android:text="@string/try_another"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>